--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kepco.app</groupId>
-    <artifactId>mcs-cms</artifactId>
+    <artifactId>csc-cms</artifactId>
     <packaging>war</packaging>
     <version>2.0.0</version>
-    <name>mcs-cms</name>
+    <name>csc-cms</name>
     <url>http://www.egovframe.go.kr</url>
 
     <licenses>
