--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ Globals.DbType=mysql
 # mysql
 Globals.mysql.DriverClassName=net.sf.log4jdbc.DriverSpy
 #Globals.mysql.Url=jdbc:log4jdbc:mysql://112.220.219.82:19836/mcs_vasanta
-Globals.mysql.Url=jdbc:log4jdbc:mysql://112.220.219.82:19836/kepcomcs
+Globals.mysql.Url=jdbc:log4jdbc:mysql://112.220.219.82:19836/mcs_vasanta
 Globals.mysql.UserName=kepcomcs
 Globals.mysql.Password=kepcomcs12!@
 
@@ -74,19 +74,6 @@ spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
-# kakao registration
-spring.security.oauth2.client.registration.kakao.client-id=7a3fb1b514cd4e32ba42bbcae94bfd33
-spring.security.oauth2.client.registration.kakao.client-secret=Vo4mExe9yv8hQpbpWSut9mX0Qiopigle
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/oauth2/callback/kakao
-spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.client-name=Kakao
-spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
-# kakao provider
-spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
-# naver map
-map.naver.clientId=70dj3smz1j
+server.error.whitelabel.enabled=false
+server.error.path=/error
